--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "buffer": "^5.0.2",
     "react": "15.4.2",
-    "react-native": "0.40.0",
+    "react-native": "^0.41.2",
     "react-native-ble-manager": "^2.4.3",
     "react-native-router-flux": "^3.37.0"
   },
