--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "test": "jest"
   },
   "dependencies": {
-    "buffer": "^5.0.2",
     "react": "15.4.2",
-    "react-native": "^0.41.2",
-    "react-native-ble-manager": "^2.4.3",
-    "react-native-router-flux": "^3.37.0"
+    "react-native": "0.41.2",
+    "react-native-ble-manager": "^3.1.0",
+    "react-native-router-flux": "^3.37.0",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
     "babel-preset-react-native": "1.9.1",
+    "eslint": "^3.15.0",
     "jest": "18.1.0",
     "react-test-renderer": "15.4.2"
   },
