--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "buffer": "^5.0.5",
     "react": "15.4.2",
     "react-native": "0.41.2",
     "react-native-ble-manager": "^3.1.0",
