--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "buffer": "^5.0.5",
+    "lodash": "^4.17.4",
     "react": "15.4.2",
     "react-native": "0.41.2",
     "react-native-ble-manager": "^3.1.0",
